esljobmap/static/foundation/scss/module/_proprietary.scss
// ==========================================================================
// Proprietary
// ==========================================================================

.ejm-logo {
    width: 157px;
}

.content {
    position: relative;
    min-height: 91vh;
    padding-bottom: 2.5rem;

    @include breakpoint(medium down) {
        min-height: 100vh;
    }
}

.bold-text {
    font-weight: bold;
}

.float-right {
    float: right;
}

.display-inline {
    display: inline;
}

.no-show {
    display: none;
}

.mt-1 {
    margin-top: 1rem;
}

.mb-1 {
    margin-bottom: 1rem;
}

.mtb-1 {
    margin: 1rem auto;
}

.mtb-2 {
    margin: 2rem auto;
}

.mtb-3 {
    margin: 3rem auto;
}

.mt-10 {
    margin-top: 10rem;
}

.p-1 {
    padding: 1rem;
}

